// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepRemuneration /> should render multiple inputs 1`] = `
.c9 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #005994;
  font-weight: normal;
  font-size: inherit;
  line-height: initial;
  text-align: left;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  vertical-align: initial;
  background: none;
  border: none;
  border-radius: 0;
}

.c9:focus,
.c9:hover,
.c9:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

.c7 {
  width: 10em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c7::-webkit-outer-spin-button,
.c7::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c6 {
  position: relative;
  display: inline-block;
  margin-right: 1rem;
}

.c8 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #adb9c9;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  margin-right: 0.625rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.25rem;
}

.c10 {
  margin-right: 1.25rem;
  font-size: 0.875rem;
}

.c11 {
  margin: 1.25rem 0;
}

.c12 {
  font-size: 0.875rem;
  font-style: italic;
}

<div>
  <p
    class="c0"
  >
    Sélectionnez la manière dont vous souhaitez indiquer votre rémunération ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        name="typeRemuneration"
        type="radio"
        value="total"
      />
      <span>
        En indiquant le 
        <strong>
          montant total
        </strong>
         des rémunérations.
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        checked=""
        name="typeRemuneration"
        type="radio"
        value="mensuel"
      />
      <span>
        En indiquant le 
        <strong>
          salaire mensuel
        </strong>
         pour chaque mois.
      </span>
    </label>
  </div>
  <p>
    Indiquez vos salaires mensuels bruts perçus pendant votre contrat *
  </p>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="2"
    >
      Montant :
    </label>
    <div
      class="c6"
    >
      <input
        class="c7"
        id="2"
        name="salaires[0].salaire"
        size="10"
        type="number"
        value="2000"
      />
      <span
        aria-hidden="true"
        class="c8"
      >
        €
      </span>
    </div>
    <button
      class="c9 c10"
      type="button"
    >
      Supprimer
    </button>
  </div>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="4"
    >
      Montant :
    </label>
    <div
      class="c6"
    >
      <input
        class="c7"
        id="4"
        name="salaires[1].salaire"
        size="10"
        type="number"
        value="1500"
      />
      <span
        aria-hidden="true"
        class="c8"
      >
        €
      </span>
    </div>
    <button
      class="c9 c10"
      type="button"
    >
      Supprimer
    </button>
  </div>
  <button
    class="c9 c11"
    type="button"
  >
    Ajouter un salaire
  </button>
  <p
    class="c12"
  >
    * Majorations, indemnités, primes et accessoires compris sauf les remboursements de frais et l’indemnité de congés payés.
  </p>
</div>
`;

exports[`<StepRemuneration /> should render one input 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 2em;
  padding: 0;
  font-size: 1.15rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 1.25rem;
}

.c0 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: default;
}

.c4 {
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
  font-size: 1.25rem;
  cursor: pointer;
}

.c1 {
  display: inline-block;
  margin-left: 0.625rem;
  color: #b50113;
  font-weight: 700;
}

.c6 {
  width: 10em;
  padding: 0.625rem 0.25rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #c9d3df;
  border-color: #c9d3df;
  border-radius: 0.25rem;
  padding-right: 1rem;
  text-align: right;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c5 {
  position: relative;
  display: inline-block;
  margin-right: 1rem;
}

.c7 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #adb9c9;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c8 {
  font-size: 0.875rem;
  font-style: italic;
}

<div>
  <p
    class="c0"
  >
    Sélectionnez la manière dont vous souhaitez indiquer votre rémunération ?
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </p>
  <div
    class="c2"
  >
    <label
      class="c3"
    >
      <input
        checked=""
        name="typeRemuneration"
        type="radio"
        value="total"
      />
      <span>
        En indiquant le 
        <strong>
          montant total
        </strong>
         des rémunérations.
      </span>
    </label>
    <label
      class="c3"
    >
      <input
        name="typeRemuneration"
        type="radio"
        value="mensuel"
      />
      <span>
        En indiquant le 
        <strong>
          salaire mensuel
        </strong>
         pour chaque mois.
      </span>
    </label>
  </div>
  <label
    class="c4"
    for="currency-1"
  >
    Indiquez votre rémunération totale brute perçue pendant votre contrat
    <span
      aria-label="champs obligatoire"
      class="c1"
    >
      *
    </span>
  </label>
  <div
    class="c5"
  >
    <input
      class="c6"
      id="currency-1"
      name="salaire"
      size="10"
      type="number"
      value="3000"
    />
    <span
      aria-hidden="true"
      class="c7"
    >
      €
    </span>
  </div>
  <p
    class="c8"
  >
    * Majorations, indemnités, primes et accessoires compris sauf les remboursements de frais et l’indemnité de congés payés.
  </p>
</div>
`;
